--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<div class="container my-5">
+<!-- <div class="container my-5">
  
     <h1 class="mb-3">Product</h1>
     <table class="table" *ngIf="products && products.length > 0">
@@ -27,5 +27,71 @@
         </tbody>
     </table>
  <p *ngIf="!products || products.length == 0"> No products found</p>
+</div> -->
+
+
+<div class="container"> 
+    <h1 class="mt-4">Product List</h1>
+<div class="mt-4">
+  <mat-form-field >
+    <mat-label>Search   </mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+  </mat-form-field>
 </div>
 
+<div class="mat-elevation-z8">
+    <table mat-table matSort [dataSource]="dataSource">
+
+     <!--idr-->     
+   <ng-container matColumnDef="productId">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="">Product ID</th>
+        <td mat-cell *matCellDef="let product">{{product.productId}}</td>
+   </ng-container>
+
+     <!--name-->
+   <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="">Name</th>
+        <td mat-cell *matCellDef="let product">{{product.name}} </td>
+    </ng-container> 
+      <!--product number-->
+    <ng-container matColumnDef="productNumber">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="">Product Number</th>
+        <td mat-cell *matCellDef="let product">{{product.productNumber}}</td>
+   </ng-container>
+
+      <!--list price-->   
+   <ng-container matColumnDef="listPrice">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="">List Price</th>
+        <td mat-cell *matCellDef="let product">{{product.listPrice}} </td>
+   </ng-container>
+
+     <!--safety stock level-->
+   <ng-container matColumnDef="safetyStockLevel">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="">Safety Stock Level</th>
+        <td mat-cell *matCellDef="let product">{{product.safetyStockLevel}}</td>
+   </ng-container>
+
+    <!--color-->
+   <ng-container matColumnDef="color">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="">Color</th>
+        <td mat-cell *matCellDef="let product">{{product.color}}</td>
+   </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumn"></tr>
+        <tr mat-row *matRowDef="let row; columns:displayedColumn"></tr>
+    </table>
+
+    <!--Shown if thereis no matching search-->
+    <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    <mat-paginator 
+              [length]="100"
+              [pageSize]="10"
+              aria-label="Select page"
+        [pageSizeOptions]="[10,20,50,100]" 
+        aria-label="Select page of product">
+    </mat-paginator>
+</div>
+
+</div>
